@@ -236,7 +236,12 @@ def _make_safearray_type(itemtype):
             """Unpack a POINTER(SAFEARRAY_...) into a Python tuple or ndarray."""
             dim = _safearray.SafeArrayGetDim(self)
 
-            if dim == 1:
+            if dim == 0:
+                if safearray_as_ndarray:
+                    import numpy
+                    return numpy.array()
+                return tuple()
+            elif dim == 1:
                 num_elements = self._get_size(1)
                 result = self._get_elements_raw(num_elements)
                 if safearray_as_ndarray:
