@@ -3,10 +3,11 @@ Comtypes CHANGELOG
 
 Release 1.1.11
 -------------
- * Fix Python 3.9+ compatibility. Thanks @kdschlosser.
+ * Fix setuptools>=60.0.0 compatibility. Thanks @kdschlosser.
  * Fix timestamping for typelib. Thanks @fusentasticus.
  * Fix 64bit inproc server.
- * Python 2.6 support is dropped.
+ * Drop Python 2.6 support.
+ * Fix IndexError for empty safearray. Thanks @BALOGHBence.
 
 Release 1.1.10
 -------------
